--- a/client/src/components/pages/index/TrendCarrousel.css
+++ b/client/src/components/pages/index/TrendCarrousel.css
@@ -7,9 +7,10 @@
 }  */
 
 .trending {
-    margin-top:80px
+    margin-top: 80px;
 
 }
+
 .trending button.slick-arrow.slick-next::before {
     color: black;
 }
@@ -18,9 +19,11 @@
     color: black;
 }
 
+
 .trending img {
-    height: 300px;
+    height: 295px;
     width: 80%;
     object-fit: cover;
-   
+    margin: auto;
+
 }
