--- a/client/src/components/pages/profile/Wishlist.css
+++ b/client/src/components/pages/profile/Wishlist.css
@@ -1,22 +1,6 @@
 
-.pict {
-  font-size: 1.1em;
-  position: fixed;
-  top: 60px;
-  right: 30px;
-  z-index: 99;
-  font-family: Raleway;
-  font-weight: 200;
-}
-
-
 a.add {
   color: black;
-}
-a:visited {
-  font-family: Raleway;
-  font-weight: 200;
-  font-size: 1.1em;
 }
 .grid {
   transition: all .5s ease-in-out;
@@ -39,44 +23,27 @@ a:visited {
   vertical-align: top;
   position: relative;
 }
-.grid .brick img {
+.grid .brick img.picture-fav {
   transition: all .5s ease-in-out;
   backface-visibility: hidden;
 }
-.grid .brick:hover img {
+
+.grid .brick:hover img.picture-fav{
   opacity: .65;
 }
-.grid .brick:hover p {
-  opacity: .40;
-}
-.grid .brick audio:hover {
-  opacity: .40;
-}
-a.delete-content {
-  font-family: raleway;
-  color: transparent;
-  text-align: left;
+.brick img.appear-on-hover {
+  opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  cursor: crosshair;
-  z-index: 5;
+  height: 30px;
+  width: 30px;
+  z-index: 55;
 }
-a.delete-content:hover {
-  color: black;
-}
-.grid.bordered {
-  column-rule: 1px solid #eee;
-  column-gap: 50px;
-}
-.grid.bordered .brick {
-  padding-bottom: 25px;
-  margin-bottom: 25px;
-  border-bottom: 1px solid #eee;
-}
+ .grid.brick:hover img.picture-fav.brick img.appear-on-hover{
+   opacity: 1;
+  }
+
 .grid.gutterless {
   column-gap: 0;
 }
@@ -86,16 +53,9 @@ a.delete-content:hover {
 .grid.gutterless .brick p:hover {
   cursor: crosshair;
 }
-.grid.gutterless .brick p {
-  padding: 4vw;
-  font-family: Raleway;
-  font-weight: 200;
-  font-size: 1.1em;
-  color: black;
-  margin-bottom: 0;
-}
+
 /* Masonry on tablets */
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
+ @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .grid {
     column-count: 2;
   }
@@ -112,4 +72,4 @@ a.delete-content:hover {
 img {
   max-width: 100%;
   vertical-align: middle;
-}
+} 
