--- a/client/src/components/pages/productList/ProductList.css
+++ b/client/src/components/pages/productList/ProductList.css
@@ -49,3 +49,10 @@ h1 {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+.buttons-box-card-product {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
