--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -4,10 +4,21 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-h1 {
-    text-align: center;
-    margin: 45px 0;
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+a {
     z-index: 99;
+}
+
+a h1 {
+    text-align: center;
+    margin: 25px 0;
+    z-index: 999;
+    color: #000000c9;
+
 }
 
 h1,
@@ -25,6 +36,11 @@ h4 {
     margin-bottom: 20px;
 }
 
+h3.centered-text {
+    margin-bottom: 32px;
+    font-weight: 400;
+}
+
 .btn {
     border-radius: 1rem;
 }
@@ -34,6 +50,7 @@ h4 {
     background-color: white;
     color: #85ac82;
     border: 1px solid #90b88d;
+    margin-bottom: 15px;
 }
 
 .btn-success:not(:disabled):not(.disabled).active,
@@ -46,7 +63,7 @@ h4 {
 
 button.btn.btn-sm {
     padding: 3px 15px;
-    margin:0 5px;
+    margin: 0 5px;
 }
 
 .name.card-title.h5 {
@@ -60,7 +77,9 @@ button.btn.btn-sm {
     font-weight: 200;
 }
 
-
+.centered-text {
+    text-align: center;
+}
 
 .title-box {
     margin-top: 20px;
