--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -6,6 +6,12 @@
     width: 100px;
 }
 
+a {
+    color: #747474;
+    text-decoration: none;
+    background-color: transparent;
+}
+
 
 .navbar.container {
     margin-bottom: 40px;
@@ -94,4 +100,15 @@ a .nav-link {
 .show>.btn-secondary.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.2rem #b7dab4;
     ;
+}
+
+button#dropdown-button-drop-down {
+    margin: 0;
+}
+
+
+.dropdown-menu {
+    position: absolute;
+    top: 154%;
+    left: -25px;
 }
