--- a/client/src/components/pages/index/Carrousel.css
+++ b/client/src/components/pages/index/Carrousel.css
@@ -1,4 +1,4 @@
-.carrousel{
+.carrousel {
     width: 100%;
 }
 
@@ -6,4 +6,63 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
+}
+
+@media (min-width: 200px) {
+    .carrousel {
+        display: none;
+    }
+
+
+
+}
+
+@media (min-width: 568px) {
+    .carrousel {
+        display: block;
+    }
+
+    .carrousel img {
+        width: 100%;
+        height: 180px;
+        object-fit: cover;
+    }
+
+}
+
+@media (min-width: 768px) {
+    .carrousel {
+        display: block;
+    }
+
+    .carrousel img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+}
+
+@media (min-width: 1024px) {
+    .carrousel {
+        display: block;
+    }
+
+    .carrousel img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+}
+
+@media (min-width: 1200px) {
+    .carrousel {
+        display: block;
+    }
+
+    .carrousel img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+    }
 }
