--- a/client/src/components/pages/profile/Wishlist.css
+++ b/client/src/components/pages/profile/Wishlist.css
@@ -36,7 +36,7 @@ a.add {
 .brick img.appear-on-hover {
   opacity: 0;
   position: absolute;
-  top: calc(50% - 70px);
+  top: calc(40% - 70px);
   left: calc(50% - 20px);
   height: 40px;
   width: 40px;
@@ -44,14 +44,50 @@ a.add {
 }
 
 .brick:hover .picture-fav {
-  opacity: 0.4;
+  opacity: 0.35;
 
 }
+
+
 
 .brick:hover .appear-on-hover {
   opacity: 0.9;
   transition: opacity .5s;
   filter: drop-shadow(1px 1px 1px #ffffff);
+}
+
+button.appear-on-hover.btn.btn-primary {
+  opacity: 0;
+}
+
+p.appear-on-hover {
+  opacity: 0;
+}
+
+h6.appear-on-hover {
+  opacity: 0;
+}
+
+.brick:hover.on-hover {
+  opacity: 1;
+}
+
+.brick:hover button.appear-on-hover.btn.btn-primary {
+  opacity: 1;
+}
+
+button.appear-on-hover.btn.btn-primary {
+  opacity: 0;
+}
+
+.on-hover {
+
+  position: absolute;
+  top: calc(55% - 70px);
+
+  margin: 0 auto;
+  width: 90%;
+
 }
 
 .grid.gutterless {
