--- a/client/src/components/layout/navbar/Navbar.css
+++ b/client/src/components/layout/navbar/Navbar.css
@@ -155,36 +155,10 @@ button#dropdown-button-drop-down {
 
 
 @media (max-width: 576px){
-    .address {
-        text-align:center;
-        margin-top: 40px;
-    }
-    .empty-cart {
-        text-align:center;
-    }
-
-    div.checkout{
-        text-align:center;
-        border-bottom: 0.8px solid grey;
-    }
-    .bottom-20{
-        height: 300px;
-        text-align: center;
-        margin-top: 20px;
-    }
-    .bottom-20 h4 {
-        padding-top: 8px;
-        font-size: 15.5px;
-        text-align: right;
-    }
-    .bottom-20 p{
-
-        text-align: right;
-    }
-    .remove {
-       text-align: left;
-    }
-
+   .product-box {
+       text-align: center;
+       align-items: center;
+   }
 }
 @media (min-width:577px) and (max-width: 766px){
     .bottom-20{
