--- a/client/src/components/pages/index/Carrousel.css
+++ b/client/src/components/pages/index/Carrousel.css
@@ -8,6 +8,13 @@
     object-fit: cover;
 }
 
+.intro {
+    margin: 0 auto;
+    max-width: 600px;
+    margin-top: 60px;
+    text-align: center;
+}
+
 @media (min-width: 200px) {
     .carrousel {
         display: none;
