--- a/client/src/components/layout/footer/Footer.css
+++ b/client/src/components/layout/footer/Footer.css
@@ -1,13 +1,18 @@
 .footer {
-
     height: 50px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
-
-.footer .col {
-
+.footer-col.col-xl-4.col-lg-4.col-md-4.col-sm-4.col-12 {
     text-align: center;
 }
 
+
 .footer img {
-    width: 40px;
+    width: 35px;
+}
+
+.footer h6{
+    margin-bottom: 15px;
+    font-weight: 300;;
 }
